--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>About Us</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel unde assumenda facilis repellat nobis est dolor in officiis eum facere atque voluptate magni eaque impedit fugiat dolorem accusamus, perferendis expedita.</p>
 </body>
 </html>
