--- a/about.html
+++ b/about.html
@@ -8,5 +8,26 @@
 <body>
     <h1>About Us</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel unde assumenda facilis repellat nobis est dolor in officiis eum facere atque voluptate magni eaque impedit fugiat dolorem accusamus, perferendis expedita.</p>
+    <table>
+        <thead>
+            <th>
+                <td>Name</td>
+                <td>Email</td>
+                <td>Phone</td>
+            </th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Aftaab</td>
+                <td>md.yash99@gmail.com</td>
+                <td>89765432109</td>
+            </tr>
+            <tr>
+                <td>Aftaab</td>
+                <td>md.yash99@gmail.com</td>
+                <td>89765432109</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
