--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>About Us</h1>
+    <h2>Muskan</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel unde assumenda facilis repellat nobis est dolor in officiis eum facere atque voluptate magni eaque impedit fugiat dolorem accusamus, perferendis expedita.</p>
     <table>
         <thead>
