Update about.html add from

--- a/about.html
+++ b/about.html
@@ -30,5 +30,10 @@
             </tr>
         </tbody>
     </table>
+    <form>
+        <input type="text" name="">
+         <input type="number" name="">
+         <input type="email" name="">
+    </form>
 </body>
 </html>
